[tool.poetry]
name = "seqdata"
version = "0.1.1"
description = "Annotated sequence data"
authors = ["adamklie <aklie@ucsd.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pyranges = "^0.0.120"
xarray = "2023.4.0"
zarr = "^2.14.2"
dask = "^2023.3.2"
pandera = "^0.14.5"
cyvcf2 = "^0.30.18"
pyBigWig = "^0.3.22"
polars = "^0.18.0"
more-itertools = "^9.1.0"
pybedtools = "^0.9.0"
pysam = "^0.21.0"
joblib = "^1.1.0"
natsort = "^8.3.1"
numpy = "~1.23.5"
pandas = "^1.5.2"
numcodecs = "^0.11.0"
typing-extensions = "^4.5.0"
tqdm = "^4.65.0"
seqpro = "0.1.1"
torch = {version = "^1.12.0", extras = ["torch"]}

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
include = ['seqdata', 'notebooks', 'tests']
