[tool.poetry]
name = "seqdata"
version = "0.0.0"  # managed by poetry-dynamic-versioning
description = "Annotated sequence data"
authors = ["David Laub <dlaub@ucsd.edu>", "adamklie <aklie@ucsd.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pyranges = "^0.0.120"
xarray = "2023.4.0"
zarr = "^2.14.2"
dask = "^2023.3.2"
pandera = "^0.14.5"
cyvcf2 = "^0.30.18"
pyBigWig = "^0.3.22"
polars = "^0.18.0"
more-itertools = "^9.1.0"
pybedtools = "^0.9.0"
pysam = "^0.21.0"
joblib = "^1.1.0"
natsort = "^8.3.1"
numpy = "~1.23.5"
pandas = "^1.5.2"
numcodecs = "^0.11.0"
typing-extensions = "^4.5.0"
tqdm = "^4.65.0"
seqpro = "^0.1.1"
torch = {version = ">=1.12.0", extras = ["torch"]}
Sphinx = {version = "^6.2.1", extras = ["docs"]}
sphinx-autobuild = {version = "2021.3.14", extras = ["docs"]}
sphinx-autodoc-typehints = {version = "^1.21.1", extras = ["docs"]}
sphinxcontrib-apidoc = {version = "^0.3.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.2.2", extras = ["docs"]}
myst-parser = {version = "^2.0.0", extras = ["docs"]}
nbsphinx = {version = "^0.9.2", extras = ["docs"]}
pandoc = {version = "^2.3", extras = ["docs"]}

[tool.poetry.extras]
torch = ["torch"]
docs = ["Sphinx", "sphinx-autobuild", "sphinx-autodoc-typehints", "sphinxcontrib-apidoc", "sphinx-rtd-theme", "myst-parser", "nbsphinx", "pandoc"]

[tool.poetry.dev-dependencies]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.pyright]
include = ['seqdata', 'notebooks', 'tests']
