[tool.poetry]
name = "seqdata"
# managed by poetry-dynamic-versioning
version = "0.0.0"
description = "Annotated sequence data"
authors = ["David Laub <dlaub@ucsd.edu>", "Adam Klie <aklie@ucsd.edu>"]

[tool.poetry.dependencies]
python = ">=3.9"
pyranges = "^0.0.120"
xarray = ">=2023.10.0"
zarr = "^2.14.2"
dask = "^2023.3.2"
pandera = { version = "^0.22.0", extras = ["polars"] }
cyvcf2 = "^0.30.18"
pyBigWig = "^0.3.22"
polars = "^1.0.0"
more-itertools = "^9.1.0"
pybedtools = "^0.9.0"
pysam = "^0.21.0"
joblib = "^1.1.0"
natsort = "^8.3.1"
numpy = "^1.26"
pandas = "^1.5.2"
numcodecs = "^0.11.0"
typing-extensions = "^4.5.0"
tqdm = "^4.65.0"
seqpro = "^0.1.1"
torch = { version = ">=2", extras = ["torch"] }
pyarrow = "^17.0.0"
pooch = "^1.8.2"

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.group.dev.dependencies]
pytest-cases = "^3.8.6"
pytest = "^8.3.3"
sphinx = ">=6.2.1"
sphinx-autobuild = "2021.3.14"
sphinx-autodoc-typehints = ">=1.23.4"
sphinxcontrib-apidoc = "^0.3.0"
sphinx-rtd-theme = "^1.2.2"
myst-parser = "^2.0.0"
nbsphinx = "^0.9.2"
pandoc = "^2.3"
icecream = "^2.1.3"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.pyright]
include = ['seqdata', 'notebooks', 'tests']
